src/test/resources/semantic/custom/reject/whileStatementCharType.ul
void main() {
}

void foo() {
    char condition;

    while (condition) {
    }
}
